# secretmangle

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: xor_bench.rs
src/: arbitrary.rs  lib.rs  nouninit.rs  option.rs
src/arbitrary/: xor_intrinsic.rs
