[package]
name = "secretmangle"
description = "A library for mangling sensitive data in memory with a random key."
repository = "https://github.com/ProgramCrafter/secretmangle"
authors = ["Ender Ting <pythonhunter146@gmail.com>"]
license = "Apache-2.0 OR MIT"
version = "0.2.1"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
getrandom = "0.3.3"
